# solo-projects

./: .gitignore  .gitmodules  README.md
ASMx86_projects/array/: ASM_array.asm
ASMx86_projects/divide/: ASM_div.asm
ASMx86_projects/for_loop/: ASM_for.asm
ASMx86_projects/max3/: ASM_max3.asm
ASMx86_projects/printf/: printf.asm
ASMx86_projects/recursion/: ASM_recursion.asm
ASMx86_projects/to_upper/: ASM_toUpper.asm
bash/proj_init/: activate.sh  add.sh  build.sh  default.txt  help.sh  my_bashrc  new.sh  project.sh  run.sh  test.sh
c_cpp_projects/DFS/iskanje_v_globino/: iskanje_v_globino.cpp
c_cpp_projects/DFS/iskanje_v_globino.xcodeproj/: project.pbxproj
c_cpp_projects/MPI_battleship/: CMakeLists.txt  main.cpp
c_cpp_projects/MPI_test/: CMakeLists.txt  MPI_SETUP.txt  RESULT.txt  RUN.txt  main.cpp
c_cpp_projects/arithmetic_coding/: CMakeLists.txt  main.cpp
c_cpp_projects/arithmetic_coding/includes/: utils.cpp  utils.h
c_cpp_projects/bin_radix/bin_sort/: dn1.cpp  out.txt
c_cpp_projects/bin_radix/bin_sort.xcodeproj/: project.pbxproj
c_cpp_projects/bin_to_ascii/: CMakeLists.txt  main.c
c_cpp_projects/binary_tree/binarno_drevo/: binarno_drevo.cpp
c_cpp_projects/binary_tree/binarno_drevo.xcodeproj/: project.pbxproj
c_cpp_projects/char_histogram/: results.txt
c_cpp_projects/clustering/grucenje_vaja05/: Cluster.h  out.txt  vaja05.cpp
c_cpp_projects/clustering/grucenje_vaja05.xcodeproj/: project.pbxproj
c_cpp_projects/count_roman_sort/sortiranje_vaja01/: sort.cpp
c_cpp_projects/count_roman_sort/sortiranje_vaja01.xcodeproj/: project.pbxproj
c_cpp_projects/differential_evolution/: analiza.txt  main.cpp
c_cpp_projects/differential_evolution/vaja01_diferencialna_evolucija/: main.cpp
c_cpp_projects/differential_evolution/vaja01_diferencialna_evolucija.xcodeproj/: project.pbxproj
c_cpp_projects/differential_evolution_MPI/vaja04_mpi/: main.cpp  mpi
c_cpp_projects/differential_evolution_MPI/vaja04_mpi.xcodeproj/: project.pbxproj
c_cpp_projects/differential_evolution_OpenMP/: CMakeLists.txt  cec19_test_func.cpp  cec2019.cpp  definicijaProblema.cpp  main.cpp
c_cpp_projects/differential_evolution_OpenMP/include/: cec19_test_func.cpp
c_cpp_projects/differential_evolution_std_thread/vaja03_cpp_threads/: definicijaProblema.cpp  main.cpp
c_cpp_projects/differential_evolution_std_thread/vaja03_cpp_threads.xcodeproj/: project.pbxproj
c_cpp_projects/double_linked_list/dvosmerni_seznam/: dvosmerni_seznam.cpp
c_cpp_projects/double_linked_list/dvosmerni_seznam.xcodeproj/: project.pbxproj
c_cpp_projects/edmonds_karp/: CMakeLists.txt  main.cpp
c_cpp_projects/gauss_elimination/: CMakeLists.txt  main.cpp
c_cpp_projects/hanoi_towers/hanojski_stolpi/: hanojski_stolpi.cpp
c_cpp_projects/hanoi_towers/hanojski_stolpi.xcodeproj/: project.pbxproj
c_cpp_projects/huffman/huffmanovo_kodiranje_vaja03/: BinReader.cpp  (+2 more)
c_cpp_projects/particle_system/: CMakeLists.txt  main.cpp
c_cpp_projects/particle_system/window/: mainwindow.cpp  mainwindow.h  widgetopengldraw.cpp  widgetopengldraw.h
c_cpp_projects/prime_numbers_generator/: CMakeLists.txt  main.cpp
c_cpp_projects/replace_find_bits/: CMakeLists.txt  main.cpp
c_cpp_projects/rsa/: CMakeLists.txt  main.cpp
c_cpp_projects/rsa/include/: utils.cpp  utils.h
c_cpp_projects/same_string_checker/: README.md  runTests.sh  solution.py
dotnet_projects/UTF8_encoding/: Program.cs
dotnet_projects/arithmetic_coding/: arithmetic_coding.sln
dotnet_projects/blockchain/: blockchain.sln
dotnet_projects/geoserver/: geoserver.sln
dotnet_projects/interpolation/: test.shx  testBilinear.shx
dotnet_projects/local_search_algos/: local_search_algos.sln
dotnet_projects/media_player/: mediaplayer.sln
dotnet_projects/minimax_alpha_beta/: minimax_alpha-beta.sln
dotnet_projects/reconfig/: reconfig.sln  reconfig.sln.DotSettings
dotnet_projects/sentinel_index/: sentinel_index.sln
dotnet_projects/steganography/: steganography.sln
node_projects/forum/: app.js  package-lock.json  package.json
node_projects/simple_contact_list/: README.md
processing_projects/intelligent_movement/: element.js  index.html  intelligent_movement.js
python_projects/CLAHE/: CLAHE.ipynb
python_projects/HDR/: HDR.ipynb  main.ipynb
python_projects/audio_recorder/: audio_rec.py  main.py
python_projects/cnn_images/: main.ipynb  prep.py
python_projects/computer_vision_ICP/: poravnava.py
python_projects/computer_vision_bayer/: bayer.py
python_projects/computer_vision_segmentation/: segmentacija.py
python_projects/data_graphs/: index.html  main.py  row.py
python_projects/dft/: README.md  audio_rec.py  constants.py  main.py  requirements.txt  utils.py
python_projects/fruit_farmer/: out.sh  sadjar.py  test.sh
python_projects/hopcroft_karp/: hka.py  test.sh  vaja02.py
python_projects/interpolation/: interpolation.ipynb
python_projects/inverse_kinematics/: Armature.py  Bone.py  Canvas.py  Game.py  README.md  UserInput.py  colors.py  manager.py
python_projects/math_morph/: math_morph.ipynb
python_projects/n_grams/: .gitignore  main.py
python_projects/object_detection/: main.py  requirements.txt
python_projects/regular_sequence/: Meritve_reg_seq.xlsx  main.py  reg.py  run_tests.sh  utils.py
python_projects/restriction_mapping/: DNA.py  Meritve.xlsx  main.py  results_naive.txt  results_partial_digest.txt  run_tests.sh  utils.py
python_projects/room_temperature_graph/: correlation.ipynb  room_temperature.ipynb  t-test_anova.html  t-test_anova.ipynb  type.txt
python_projects/sentinel_index/: main.py  requirements.txt
python_projects/sign_detection/: main.ipynb  main.py  requirements.txt
python_projects/topo_sort/: data.txt  topo_sort.py
python_projects/web_scraper/: entry.py  main.py  output.json  web_module.py
(+351 files in other folders)
